[metadata]
name = shioaji_realtime_kbars
version = 1.1.0
author = NickLin910221
author_email = nicklin910221@gmail.com
description = An Extensions help you streaming with real-time data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shioaji
url = https://github.com/NickLin910221/Shioaji_Realtime_Kline
project_urls =
    Bug Tracker = https://github.com/NickLin910221/Shioaji_Realtime_Kline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    shioaji
    numpy
[options.packages.find]
where = src